# wabbajack-py

./: .gitignore  .improve-features.md  .improve-log.md  .improve-research.md  .improve-security-findings.md  .improve-simplify-findings.md  CLAUDE.md  ISSUES.md  README.md  TESTING-PLAN.md  build.py  install.sh  pyproject.toml  wabbajack-py.spec
.claude/: ralph-loop.local.md
.github/workflows/: release.yml
docs/plans/: 2026-03-25-frontend-audit-fixes.md  2026-03-25-mo2-load-order-research.md  2026-03-25-web-gui-design.md  2026-03-25-web-gui-plan.md
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts
frontend/src/lib/components/: GameBadge.svelte  LogViewer.svelte  ManualDownloadCard.svelte  ModCard.svelte  ProgressBar.svelte
frontend/src/lib/stores/: ws.ts
frontend/src/routes/: Downloads.svelte  Gallery.svelte  Install.svelte  ModDetail.svelte  Profiles.svelte  Settings.svelte
packaging/linux/: build-appimage.sh  wabbajack-py.desktop
packaging/windows/: installer.iss
src/wabbajack/: __init__.py  __main__.py  bsa.py  cache.py  cli.py  config.py  finder.py  hash.py  installer.py  loadorder.py  modlist.py  octodiff.py  platform.py  profiles.py  progress.py  state.py  updater.py
src/wabbajack/downloaders/: __init__.py  cdn.py  gdrive.py  mediafire.py  mega.py  moddb.py  nexus.py
src/wabbajack/web/: __init__.py  api.py  auth.py  gallery.py  ws.py
tests/: conftest.py  test_integration.py  test_unit.py  test_web.py
