[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wabbajack-py"
version = "0.3.0"
description = "Cross-platform Wabbajack modlist installer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Paul" }]
keywords = ["wabbajack", "modding", "skyrim", "modlist", "installer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "click>=8.0",
    "xxhash>=3.0",
    "requests>=2.28",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
gdrive = ["gdown>=5.0"]
rich = ["rich>=13.0"]
bsa = ["sse-bsa>=1.0"]
web = ["watchdog>=3.0", "keyring>=24.0", "pystray>=0.19", "Pillow>=10.0"]
all = ["gdown>=5.0", "rich>=13.0", "sse-bsa>=1.0", "watchdog>=3.0", "keyring>=24.0"]

[project.scripts]
wabbajack-py = "wabbajack.cli:main"

[project.urls]
Repository = "https://github.com/your-username/wabbajack-py"

[tool.hatch.build.targets.wheel]
packages = ["src/wabbajack"]
